--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-uefi = {version = "0.13.0", features = ["exts"]}
+uefi = {version = "0.13.0", features = ["exts", "logger"]}
 uefi-services = "0.10.0"
+log = {version = "0.4.0", default-features = false}
