--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-uefi = {version = "0.14.0", features = ["exts", "logger"]}
+uefi = { version = "0.14.0", features = ["exts", "logger"] }
 uefi-services = "0.11.0"
-log = {version = "0.4.0", default-features = false}
+log = { version = "0.4.0", default-features = false }
+#getrandom = { version = "0.2", features = ["rdrand"] }
+#rand_core = {version = "0.6.3", default-features = false, features = ["getrandom"] }
+#rand = { version = "0.8", default-features = false, features = ["getrandom"] }
+#x25519-dalek = { version = "2.0.0-pre.1", default-features = false , features = ["u64_backend"]}
+#k256 = { version = "0.11.0-pre.0", default-features = false, features = ["ecdh", "jwk"] }
+
+[patch.crates-io]
+uefi = { path = "../uefi-rs" }
+uefi-services = { path = "../uefi-rs/uefi-services" }
