--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ rand_core = "0.6.3"
 x25519-dalek = { version = "2.0.0-pre.1", default-features = false, features = ["u64_backend"] }
 hex = { version = "0.4", default-features = false }
 aes = { version = "0.7.5", features = ["force-soft"] }
+
+[profile.release]
+opt-level = 'z'
+codegen-units = 1
