--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "notpetyaagain_boot"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -17,5 +17,6 @@ hex = { version = "0.4", default-features = false }
 aes = { version = "0.7.5", features = ["force-soft"] }
 
 [profile.release]
+panic = "abort"
 opt-level = 'z'
 codegen-units = 1
